<resources>
    <string name="app_name">FDSMeshLibDemo</string>
    <string name="confirm_text">确定</string>
    <string name="cancel_text">取消</string>
    <string name="notifyTitle">提示</string>
    <string name="gpsNotifyMsg">当前应用需要打开定位功能,请点击设置-定位服务-打开定位功能</string>
    <string name="sending_completed_text">发送完成</string>
    <string name="equipment_not_online_text">设备不在线，请稍后</string>
    <string name="firmware_version_text">蓝牙固件版本：</string>
    <string name="mesh_lib_ver">MESH库版本</string>
    <string name="my_about">关于软件</string>
    <string name="shear_json">分享当前JSON</string>
    <string name="shear_log">分享日志</string>
    <string name="text_dev_number">设备数量</string>
    <string name="text_reset_dev_network">重置设备配网</string>
    <string name="text_reset_dev_list">可重置设备列表</string>
    <string name="text_reset_start">开始重置</string>
    <string name="text_provision_model">配网模式</string>
    <string name="text_device_list">设备列表</string>
    <string name="text_pv_model_def">Def默认配网模式</string>
    <string name="text_pv_model_fast">Fast配网模式</string>
    <string name="text_pv_model_auto">Auto版本自适应</string>
    <string name="text_time_out">超时</string>
</resources>