<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.linkiing.fdsmeshlibdemo.view.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:titleBar_titleText="Setting"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/white_round_bg"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <com.linkiing.fdsmeshlibdemo.view.MenuItem
            android:id="@+id/reset_dev_network"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu_text="@string/text_reset_dev_network"
            app:menu_image_end="@drawable/arrow_right"
            app:menu_text_end=""/>

        <com.linkiing.fdsmeshlibdemo.view.MenuItem
            android:id="@+id/menu_fast_provision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu_text="@string/text_fast_provision"
            app:menu_switch="true"/>

        <com.linkiing.fdsmeshlibdemo.view.MenuItem
            android:id="@+id/my_shear_json"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu_text="@string/shear_json"
            app:menu_image_end="@drawable/arrow_right"
            app:menu_text_end=""/>

        <com.linkiing.fdsmeshlibdemo.view.MenuItem
            android:id="@+id/my_shear_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu_text="@string/shear_log"
            app:menu_image_end="@drawable/arrow_right"
            app:menu_text_end=""/>

        <com.linkiing.fdsmeshlibdemo.view.MenuItem
            android:id="@+id/mesh_lib_ver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu_text="@string/mesh_lib_ver"
            app:menu_image_end="@drawable/arrow_right"
            app:menu_text_end="v1.0.0"/>

        <com.linkiing.fdsmeshlibdemo.view.MenuItem
            android:id="@+id/my_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu_text="@string/my_about"
            app:menu_image_end="@drawable/arrow_right"
            app:menu_text_end="v1.0.0"
            app:menu_bt_line="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/white_round_bg"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_test_model"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="16sp"
            android:textColor="@color/red1"
            android:text="TEST_MODEL(不要开启)"
            android:checked="false"
            android:background="@drawable/white_round_bg"
            android:layout_marginStart="10dp"/>

        <View
            android:id="@+id/bt_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/grey_line"
            android:layout_marginStart="10dp"
            android:layout_alignParentBottom="true"/>

        <com.linkiing.fdsmeshlibdemo.view.MenuItem
            android:id="@+id/menu_street_lamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu_text="@string/text_street_lamp"
            app:menu_switch="true"
            app:menu_bt_line="false"/>

    </LinearLayout>

</LinearLayout>